src/LandingPage.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');

  

  body, html {
    margin: 0;
    padding: 0;
    height: 100%;
    font-family: 'IBM Plex Sans', sans-serif;
    font-weight: 700;
    font-style: bold;
    letter-spacing: 3px;
    overflow-x: hidden;
    
  }
  
  .landing-page {
    background-image: url('./images/larger.png'), url('./images/ruido\ copy.png');
    background-size: auto 100%, auto;
    background-position: left center, top left;
    background-repeat: no-repeat, repeat;
    background-color: #191919;
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: flex-start; /* Aligns the content to the right */
    color: white;
    text-align: center;
    padding-left: 41%;
    position: relative;
    flex-direction: row;
  }
  
  .content {
    max-width: 90%;
    padding: 2%;
    font-size: 0.9em;
    border-radius: 10px;
    text-align: left;
    margin-right: 2%; /* Optional: adds space from the right edge */
    
}

.footer {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: row;
    gap: 20px; /* Space between links */
    padding: 10px;
    background-color: rgba(0, 0, 0, 0.8); /* Optional: background for the footer */
    color: white;
  }
  
  .footer a {
    color: #3fea4b;
    text-decoration: none;
    font-size: 0.9em;
  }
  
  .footer a:hover {
    text-decoration: underline;
  }
  
  .event {
    margin: 15px 0;
  }
  
  a {
    color: #3fea4b;
    text-decoration: none;
  }
  
  a:hover {
    cursor: unset;
    text-decoration: underline;
  }
/* if screen size is not long enough vertically, resize content */


  /* Media Query for Mobile Version */
/* @media (max-width: 768px) {
    .landing-page {
      flex-direction: column;
      align-items: center;
      padding: 0;
      justify-content: center;
      text-align: center;
    }
  
    .content {
      max-width: 90%;
      margin: 0 20px;
    }
} */

/* style for desktop vertical view */
@media (max-width: 1585px) {

}

/* mobile view style */
@media (max-width: 768px) {
    body, html {
        margin: 0;
        padding: 0;
        height: 100%;
        
        font-family: 'IBM Plex Sans', sans-serif;
        font-weight: 700;
        
        font-style: bold;
        letter-spacing: 2px;
        overflow-x: hidden;
      }

    .landing-page {
      flex-direction: column;
      align-items: flex-start;
      padding-left: 0;
      justify-content: flex-start;
      height: auto; /* Let the height be determined by content */
      text-align: left;
    }
  
    .background-section {
      width: 100%;
      height: 100vh;
      min-height: 100vh;
      background-image: url('./images/iphone.png'), url('./images/ruido\ copy.png');
      background-size: cover, auto; /* Cover for the first image, auto for the second */
      background-position: center, center;
      background-repeat: no-repeat, repeat-y; /* No-repeat for the first, repeat-y for the second */
      /* background-attachment: local; Ensures that the background image scrolls with the content */
    }
  
    .content {
      line-height: 150%;
      width: 100%;
      max-width: none; /* Remove max-width */
      margin: 0; /* Remove margin */
      padding: 20px;
      margin-top: 125%;
      border-radius: 0 0 10px 10px; /* Optional: Round bottom corners */
      box-sizing: border-box;
      background-image: url('./images/ruido\ copy.png');
      font-size: 0.55em;
    }
  }




  /* ----------------------------mouse animation keyframes----------------------- */
  @-webkit-keyframes cursorAnimation {
    0% { cursor: url('./images/frame_00_delay-0.1s.gif'), auto; }
    10% { cursor: url('./images/frame_01_delay-0.1s.gif'), auto; }
    20% { cursor: url('./images/frame_02_delay-0.1s.gif'), auto; }
    30% { cursor: url('./images/frame_03_delay-0.1s.gif'), auto; }
    40% { cursor: url('./images/frame_04_delay-0.1s.gif'), auto; }
    50% { cursor: url('./images/frame_05_delay-0.1s.gif'), auto; }
    60% { cursor: url('./images/frame_06_delay-0.1s.gif'), auto; }
    70% { cursor: url('./images/frame_07_delay-0.1s.gif'), auto; }
    80% { cursor: url('./images/frame_08_delay-0.1s.gif'), auto; }
    90% { cursor: url('./images/frame_09_delay-0.1s.gif'), auto; }
    100% { cursor: url('./images/frame_00_delay-0.1s.gif'), auto; }
  }
  
  @keyframes cursorAnimation {
    0% { cursor: url('./images/frame_00_delay-0.1s.gif'), auto; }
    10% { cursor: url('./images/frame_01_delay-0.1s.gif'), auto; }
    20% { cursor: url('./images/frame_02_delay-0.1s.gif'), auto; }
    30% { cursor: url('./images/frame_03_delay-0.1s.gif'), auto; }
    40% { cursor: url('./images/frame_04_delay-0.1s.gif'), auto; }
    50% { cursor: url('./images/frame_05_delay-0.1s.gif'), auto; }
    60% { cursor: url('./images/frame_06_delay-0.1s.gif'), auto; }
    70% { cursor: url('./images/frame_07_delay-0.1s.gif'), auto; }
    80% { cursor: url('./images/frame_08_delay-0.1s.gif'), auto; }
    90% { cursor: url('./images/frame_09_delay-0.1s.gif'), auto; }
    100% { cursor: url('./images/frame_00_delay-0.1s.gif'), auto; }
  }
  
  .animated-cursor {
    -webkit-animation: cursorAnimation 1s steps(10) infinite;
    animation: cursorAnimation 1s steps(10) infinite;
  }
    /* ----------------------------mouse animation keyframes----------------------- */  
  

